[gd_scene load_steps=23 format=3 uid="uid://bpum8nvfm1ph4"]

[ext_resource type="Script" path="res://Scripts/Rooms/RoomManagers/hub.gd" id="1_anvpw"]
[ext_resource type="Texture2D" uid="uid://dypunbyc3lxhe" path="res://Textures/RoomTextures/Floors/FLOOR_TILE_V2.png" id="2_46jx2"]
[ext_resource type="Texture2D" uid="uid://dm68cmcgoiy31" path="res://Textures/RoomTextures/Concrete undamaged-1.png" id="3_omovr"]
[ext_resource type="Script" path="res://Scenes/testingLevels/fire.gd" id="4_rnf6b"]
[ext_resource type="ArrayMesh" uid="uid://hw8k1mn4oudl" path="res://Assets/Models/placeholders/PlaceholderTable/tinker.obj" id="5_8h3pe"]
[ext_resource type="Script" path="res://Scripts/Rooms/RoomManagers/fire_console.gd" id="6_ulpcg"]
[ext_resource type="PackedScene" uid="uid://4j6k3kptq054" path="res://Scenes/Objects/storm_timer.tscn" id="7_2r685"]
[ext_resource type="PackedScene" uid="uid://c8nrcyxiviwja" path="res://Assets/Characters/Player/player.tscn" id="8_7j12s"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_of3o3"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_xgpjm"]
sky_material = SubResource("ProceduralSkyMaterial_of3o3")

[sub_resource type="Environment" id="Environment_rbggt"]
background_mode = 2
sky = SubResource("Sky_xgpjm")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_21ts2"]
albedo_texture = ExtResource("2_46jx2")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_xoadi"]
material = SubResource("StandardMaterial3D_21ts2")
size = Vector2(10, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_rb3fy"]
points = PackedVector3Array(5.07738, 0.079334, 5.07738, -5.07738, -0.079334, -5.07738, -5.07738, 0.079334, -5.07738, 5.07738, -0.079334, -5.07738, -5.07738, -0.079334, 5.07738, -5.07738, 0.079334, 5.07738, 5.07738, 0.079334, -5.07738, 5.07738, -0.079334, 5.07738)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aive5"]
albedo_texture = ExtResource("3_omovr")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_5ftc0"]
material = SubResource("StandardMaterial3D_aive5")
size = Vector2(10, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_qnkde"]
points = PackedVector3Array(5.07738, 0.079334, 5.07738, -5.07738, -0.079334, -5.07738, -5.07738, 0.079334, -5.07738, 5.07738, -0.079334, -5.07738, -5.07738, -0.079334, 5.07738, -5.07738, 0.079334, 5.07738, 5.07738, 0.079334, -5.07738, 5.07738, -0.079334, 5.07738)

[sub_resource type="BoxMesh" id="BoxMesh_psncc"]
size = Vector3(10, 1, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ylig5"]
points = PackedVector3Array(4.78818, 0.5, 4.78724, -5.07837, -0.579365, -5.07738, -5.07837, -0.579365, 5.07738, 5.07837, -0.579365, -5.07738, -4.78818, 0.5, -4.78724, 5.07837, -0.579365, 5.07738, -4.78818, 0.5, 4.78724, 4.78818, 0.5, -4.78724)

[sub_resource type="BoxShape3D" id="BoxShape3D_5nlea"]
size = Vector3(75, 80, 50)

[sub_resource type="ViewportTexture" id="ViewportTexture_c0ww2"]
viewport_path = NodePath("Rooms/hub_room/Sign/SubViewport")

[sub_resource type="LabelSettings" id="LabelSettings_tt6jo"]
font_size = 60

[node name="Hub" type="Node3D"]
script = ExtResource("1_anvpw")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rbggt")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
light_color = Color(1, 1, 0.698039, 1)
light_energy = 16.0
shadow_enabled = true
spot_range = 13.4022
spot_angle = 43.3159

[node name="Rooms" type="Node" parent="."]

[node name="hub_room" type="Node3D" parent="Rooms"]

[node name="RoomParts" type="Node3D" parent="Rooms/hub_room"]

[node name="Floor" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor7" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor7/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor8" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor8"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor8/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor9" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor9"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor9/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor5" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor5/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor6" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor6/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor2" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor2/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor3" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor3/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Floor4" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30)
mesh = SubResource("PlaneMesh_xoadi")
skeleton = NodePath("../..")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Floor4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Floor4/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_rb3fy")

[node name="Ceiling" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(-1, -1.19209e-07, 0, 1.19209e-07, -1, 0, 0, 0, 1, 0, 10, 0)
mesh = SubResource("PlaneMesh_5ftc0")
skeleton = NodePath("../..")

[node name="StaticBody3D6" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Ceiling"]
transform = Transform3D(-1, -1.19209e-07, 1.04216e-14, -1.19209e-07, 1, -8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Ceiling/StaticBody3D6"]
shape = SubResource("ConvexPolygonShape3D_qnkde")

[node name="Wall" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1, 0, 0, 0, 1.19249e-08, -1, 0, 1, 1.19249e-08, 0, 5, -35)
mesh = SubResource("PlaneMesh_5ftc0")
skeleton = NodePath("../..")

[node name="StaticBody3D2" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Wall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Wall/StaticBody3D2"]
shape = SubResource("ConvexPolygonShape3D_qnkde")

[node name="Wall2" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(-4.37114e-08, 1, 1.19249e-08, 0, 1.19249e-08, -1, -1, -4.37114e-08, -5.21254e-16, -25, 5, 0)
mesh = SubResource("PlaneMesh_5ftc0")
skeleton = NodePath("../..")

[node name="StaticBody3D2" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Wall2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Wall2/StaticBody3D2"]
shape = SubResource("ConvexPolygonShape3D_qnkde")

[node name="Wall4" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(1.31134e-07, -1, -1.19249e-08, 0, 1.19249e-08, -1, 1, 1.31134e-07, 1.56376e-15, 35, 5, 0)
mesh = SubResource("PlaneMesh_5ftc0")
skeleton = NodePath("../..")

[node name="StaticBody3D2" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Wall4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Wall4/StaticBody3D2"]
shape = SubResource("ConvexPolygonShape3D_qnkde")

[node name="Wall3" type="MeshInstance3D" parent="Rooms/hub_room/RoomParts"]
transform = Transform3D(-1, -8.74228e-08, -1.04251e-15, 0, 1.19249e-08, -1, 8.74228e-08, -1, -1.19249e-08, 0, 5, 5)
mesh = SubResource("PlaneMesh_5ftc0")
skeleton = NodePath("../..")

[node name="StaticBody3D2" type="StaticBody3D" parent="Rooms/hub_room/RoomParts/Wall3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/RoomParts/Wall3/StaticBody3D2"]
shape = SubResource("ConvexPolygonShape3D_qnkde")

[node name="Fire" type="MeshInstance3D" parent="Rooms/hub_room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)
mesh = SubResource("BoxMesh_psncc")
script = ExtResource("4_rnf6b")

[node name="StaticBody3D" type="StaticBody3D" parent="Rooms/hub_room/Fire"]

[node name="Area3D" type="Area3D" parent="Rooms/hub_room/Fire/StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/Fire/StaticBody3D/Area3D"]
shape = SubResource("ConvexPolygonShape3D_ylig5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/Fire/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_ylig5")

[node name="FireConsole" type="CSGMesh3D" parent="Rooms/hub_room"]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 0, 1.5, -1.5)
mesh = ExtResource("5_8h3pe")
script = ExtResource("6_ulpcg")

[node name="Area3D" type="Area3D" parent="Rooms/hub_room/FireConsole"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/FireConsole/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32163, -8.42009, 0)
shape = SubResource("BoxShape3D_5nlea")

[node name="ConsoleBody" type="StaticBody3D" parent="Rooms/hub_room/FireConsole"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/FireConsole/ConsoleBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32163, -8.42009, 0)
shape = SubResource("BoxShape3D_5nlea")

[node name="FireConsole2" type="CSGMesh3D" parent="Rooms/hub_room"]
transform = Transform3D(-1.31134e-09, 0, -0.03, 0, 0.03, 0, 0.03, 0, -1.31134e-09, 33, 1.5, 0)
mesh = ExtResource("5_8h3pe")
script = ExtResource("6_ulpcg")

[node name="Area3D" type="Area3D" parent="Rooms/hub_room/FireConsole2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/FireConsole2/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32163, -8.42009, 0)
shape = SubResource("BoxShape3D_5nlea")

[node name="ConsoleBody" type="StaticBody3D" parent="Rooms/hub_room/FireConsole2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/FireConsole2/ConsoleBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32163, -8.42009, 0)
shape = SubResource("BoxShape3D_5nlea")

[node name="FireConsole3" type="CSGMesh3D" parent="Rooms/hub_room"]
transform = Transform3D(-1.31134e-09, 0, 0.03, 0, 0.03, 0, -0.03, 0, -1.31134e-09, -23, 1.5, 0)
mesh = ExtResource("5_8h3pe")
script = ExtResource("6_ulpcg")

[node name="Area3D" type="Area3D" parent="Rooms/hub_room/FireConsole3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/FireConsole3/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32163, -8.42009, 0)
shape = SubResource("BoxShape3D_5nlea")

[node name="ConsoleBody" type="StaticBody3D" parent="Rooms/hub_room/FireConsole3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rooms/hub_room/FireConsole3/ConsoleBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.32163, -8.42009, 0)
shape = SubResource("BoxShape3D_5nlea")

[node name="Sign" type="Sprite3D" parent="Rooms/hub_room"]
transform = Transform3D(1, 0, 5.56363e-08, 0, 1, 0, -5.56363e-08, 0, 1, 0, 3.666, -34.9)
texture = SubResource("ViewportTexture_c0ww2")

[node name="SubViewport" type="SubViewport" parent="Rooms/hub_room/Sign"]
size = Vector2i(300, 100)

[node name="Label" type="Label" parent="Rooms/hub_room/Sign/SubViewport"]
offset_right = 40.0
offset_bottom = 23.0
text = "Exit"
label_settings = SubResource("LabelSettings_tt6jo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StormTimer" parent="." instance=ExtResource("7_2r685")]

[node name="player" parent="." instance=ExtResource("8_7j12s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22705, 3.32548)

[connection signal="area_entered" from="Rooms/hub_room/Fire/StaticBody3D/Area3D" to="Rooms/hub_room/Fire" method="_on_area_3d_area_entered"]
